--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: "com.android.application"
 apply plugin: "com.google.gms.google-services"
+
 import com.android.build.OutputFile
 import org.apache.tools.ant.taskdefs.condition.Os
 
@@ -81,8 +82,29 @@ import org.apache.tools.ant.taskdefs.condition.Os
 project.ext.react = [
     enableHermes: true,  // clean and rebuild if changing
 ]
+project.ext.vectoricons = [
+        iconFontNames: [
+                'AntDesign.ttf',
+                'Entypo.ttf',
+                'EvilIcons.ttf',
+                'Feather.ttf',
+                'FontAwesome.ttf',
+                'FontAwesome5_Brands.ttf',
+                'FontAwesome5_Regular.ttf',
+                'FontAwesome5_Solid.ttf',
+                'Fontisto.ttf',
+                'Foundation.ttf',
+                'Ionicons.ttf',
+                'MaterialCommunityIcons.ttf',
+                'MaterialIcons.ttf',
+                'Octions.ttf',
+                'SimpleLineIcons.ttf',
+                'Zocial.ttf',
+        ] // Name of the font files you want to copy
+]
 
 apply from: "../../node_modules/react-native/react.gradle"
+apply from: "../../node_modules/react-native-vector-icons/fonts.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -255,7 +277,7 @@ dependencies {
     implementation "com.facebook.react:react-native:+"  // From node_modules
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
-
+implementation project(':react-native-vector-icons')
     implementation platform('com.google.firebase:firebase-bom:31.1.1')
     implementation 'com.google.firebase:firebase-analytics'
 
