--- a/package.json
+++ b/package.json
@@ -5,22 +5,41 @@
   "scripts": {
     "android": "react-native run-android --port 8083",
     "ios": "react-native run-ios",
-    "start": "react-native start",
+    "start": "react-native start --port 8083",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.10",
     "@react-native-firebase/app": "^16.5.0",
     "@react-native-firebase/auth": "^16.5.0",
     "@react-native-firebase/database": "^16.5.0",
     "@react-native-firebase/firestore": "^16.5.0",
     "@react-native-firebase/storage": "^16.5.0",
     "@react-native-google-signin/google-signin": "^9.0.2",
+    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-navigation/bottom-tabs": "^6.5.2",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/native-stack": "^6.9.7",
+    "@react-navigation/stack": "^6.3.10",
+    "@reduxjs/toolkit": "^1.8.6",
     "firebase": "^9.15.0",
     "geolib": "^3.3.3",
+    "moment": "^2.29.4",
     "react": "18.1.0",
     "react-native": "0.70.6",
-    "react-native-geolocation-service": "^5.3.1"
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2",
+    "react-native-vector-icons": "^9.2.0",
+    "react-native-webview": "^11.23.1",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-observable": "^2.0.0",
+    "redux-persist": "^6.0.0",
+    "use-debounce": "^8.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -31,14 +50,19 @@
     "@types/react": "^18.0.21",
     "@types/react-native": "^0.70.6",
     "@types/react-test-renderer": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.37.0",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.32.0",
+    "eslint": "^8.30.0",
+    "eslint-config-standard-with-typescript": "^24.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.6.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.11",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
     "react-test-renderer": "18.1.0",
-    "typescript": "^4.8.3"
+    "typescript": "^4.9.4"
   },
   "jest": {
     "preset": "react-native",
